--- a/styles.css
+++ b/styles.css
@@ -1,136 +1,175 @@
-@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Potta+One&display=swap');
+
+html {
+  font-size: 20px;
+  font-family: Roboto;
+}
 
 body {
-    color: #555;
-    margin: 0;
-
-    font-family:  "Montserrat", sans-serif;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 
-#header {
-    background-color: #1abc9c;
-    height: 150px;
-    line-height: 150px;
+h1, #mission h2, #contact h2 {
+  font-family: "Potta One";
 }
 
-#header a {
-    color: white;
-    text-decoration: none;
-
-    text-transform: uppercase;
-    letter-spacing: 0.1em;
+h2 {
+  padding-top: 0.5rem;
 }
 
-#header a:hover{
-    color: #222;
+ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
-#header-title {
-    display: block;
-    float: left;
-    margin-top: 0;
-
-    font-size: 20px;
-    font-weight: bold;
+li {
+  list-style: none;
 }
 
-#header-nav {
-    display: block;
-    float: right;
-    margin-top: 0;
+a {
+  text-decoration: none;
+  text-transform: uppercase;
 }
 
-#header-nav li {
-    display: inline;
-    padding-left: 20px;
+a:link {
+  color: black;
 }
 
-.container, .post-container {
-    max-width: 1000px;
-    margin: 0 auto;
+a:visited {
+  color: black;
 }
 
-#footer {
-    background-color: #2f2f2f;
-    padding: 50px 0;
+a:hover {
+  color: teal;
 }
 
-#footer h4 {
-    color: white;
-    text-transform: uppercase;
-    letter-spacing: 0.1em;
+#mission {
+  margin-top: 2rem;
+  background: url('resources/img/photo-1497032628192-86f99bcd76bc.jpeg') no-repeat center fixed;
+  background-size: cover;
+  height: 30rem;
+  display: flex;
 }
 
-#footer p {
-    color: white;
+#mission .text-mission {
+  background-color: white;
+  color: black;
+  margin: auto;
+  width: 100%;
 }
 
-#footer a {
-    color: #1abc9c;
-    text-decoration: none;
+#catalog {
+  margin: 2rem 0;
 }
 
-#footer a:hover{
-    color: #F6a623;
+#catalog .content {
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: auto;
 }
 
-.column {
-    min-width: 300px;
-    display: inline-block;
-    vertical-align: top;
+#catalog #fournitures {
+  background: url('resources/img/fournitures.jpeg') no-repeat center;
+  background-size: cover;
+  width: 100%;
+  margin: 1rem 1rem;
 }
 
-.post, .about {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 60px 0;
+#catalog #organization {
+  background: url('resources/img/balance.jpeg') no-repeat center;
+  background-size: cover;
+  margin: 1rem 1rem;
 }
 
-.post-author img {
-    width: 50px;
-    height: 50px;
-    vertical-align: middle;
+#catalog #home {
+  background: url('resources/img/setup.jpeg') no-repeat center;
+  background-size: cover;
+  margin: 1rem 1rem;
 }
 
-.post-author img, .about-author img {
-    border-radius: 50%;
+#catalog #out {
+  background: url('resources/img/outside.jpeg') no-repeat center;
+  background-size: cover;
+  margin: 1rem 1rem;
 }
 
-.post-author span {
-    margin-left: 16px;
+#catalog p {
+  margin: 10rem 2rem;
+  padding: 1rem;
+  background-color: white;
+  opacity: 0.1;
+  transition: 0.3s
 }
 
-.post-date {
-    color: #D2D2D2;
-    
-    font-size: 14px;
-    font-weight: bold;
-
-    text-transform: uppercase;
-    letter-spacing: 0.1em;
+#catalog p:hover {
+  opacity: 1;
+  padding: 1.5rem;
+  font-size: 1.5rem;
 }
 
-h1, h2, h3, h4 {
-    color: #333;
+#team {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-p {
-    line-height: 1.5;
+.abi {
+  background: url('resources/img/IMG_4436.jpeg') no-repeat center;
+  background-size: cover;
+  width: 50%;
+  height: 20rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
-.about-author img {
-    width: 50%;
+.anna {
+  background: url('resources/img/IMG_4559.jpeg') no-repeat center;
+  background-size: cover;
+  width: 50%;
+  height: 20rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
-.about {
-    text-align: center;
-    margin: auto;
+.team-info {
+  width: 100%;
+  background-color: rgb(31, 31, 31);
+  color: white;
+  opacity: 0.7;
 }
 
-.post-container {
-    width: 100%;
+.team-info p {
+  margin: 0 0 0.5rem 0;
 }
 
-.post-container:nth-child(even){
-    background-color: #fffff0;
+.team-info h3 {
+  margin: 0.5rem 0 0.5rem 0;
+}
+
+#contact {
+  padding: 2rem 2rem;
+  background-color: rgb(31, 31, 31);
+  color: white;
+}
+
+footer {
+  font-size: 0.85rem;
+}
+
+@media only screen and (max-width: 700px) {
+  html {
+    font-size: 30px;
+  }
 }
